fixed buttons not showing and minor design improvements

--- a/bruinmatch-frontend/src/Rec.css
+++ b/bruinmatch-frontend/src/Rec.css
@@ -43,12 +43,6 @@
 
 .phone1 {
   padding-left: 300px;
-  padding-top: 100px;
-
-  font-size: 18px;
-  font-weight: 500;
-  font-family: "Prompt";
-  color: #525252;
 }
 
 .name1 {
@@ -92,6 +86,14 @@
   font-size: 20px;
 }
 
+.save1:hover {
+  background: #659eca;
+}
+
+.save1:active {
+  background: #c1e4ff;
+}
+
 .view1 {
   margin-left: 200px;
   margin-top: 75px;
@@ -100,6 +102,14 @@
   background-color: #c1e4ff;
   padding: 5px 20px;
   font-size: 20px;
+}
+
+.view1:hover {
+  background: #659eca;
+}
+
+.view1:active {
+  background: #c1e4ff;
 }
 
 .email1 {
